--- a/notebooks/Using Gensim for LDA.ipynb
+++ b/notebooks/Using Gensim for LDA.ipynb
@@ -245,8 +245,7 @@
       "It just makes some of the things I'll show you next nicer.\n",
       "2. **alpha**: This particular LDA implementation uses something that can automatically update the `alpha` value for us.\n",
       "This determines how 'smooth' the model is, which makes no damned sense if you aren't working in the area (it doesn't make much sense to me).\n",
-      "Here's what alpha does: as it gets smaller, each topic is going to be *more specific*, i.e., likely to only made up of words not in other topics. As it gets bigger, words can begin to appear in multiple topics, which is what we want.\n",
-      "The word \"ball\" could appear in a topic on baseball, basketball, football-- okay you get it.\n",
+      "Here's what alpha does: as it gets smaller, each document is going to be *more specific*, i.e., likely to only made up of words a few topics. As it gets bigger, a document can begin to appear in multiple topics, which is what we want.\n",
       "It's not good to have a large alpha either, because then all our topics will start intermingling and making out and that's gross.\n",
       "I have no idea how the `'auto'` setting really works, but it seems pretty legit to me so I'll just use that for now.\n",
       "3. **num_topics**:\n",
