fix link to android titles dataset

--- a/notebooks/Using Gensim for LDA.ipynb
+++ b/notebooks/Using Gensim for LDA.ipynb
@@ -54,7 +54,7 @@
       "but that's just dumb.\n",
       "\n",
       "I've got handy a corpus of every title (already preprocessed) of the Android issue report database.\n",
-      "You can download that [here](/static/android_titles.tar.gz).\n",
+      "You can download that [here](https://drive.google.com/open?id=0BxrXGxfAKIwfUjVuSnhSVVBTZVU).\n",
       "\n",
       "Here is the first three lines (aka the first three documents (aka the first three issue report titles))\n",
       "of the corpus file:"
